--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 # https://intellij-support.jetbrains.com/hc/en-us/articles/206544839-How-to-manage-projects-under-Version-Control-Systems
 
 # user-specific stuff
+.idea/
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/dictionaries
